--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,34 @@
 .App {
   text-align: center;
 }
+
+header {
+  text-align: left;
+  margin: 0.5vw;
+  display: flex;
+  align-items: center;
+}
+
+.headerText {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  color: #001D7C;
+}
+
+.headerText h1 {
+  margin: 0;
+  font-size: 50px;
+}
+
+.headerText p {
+  margin: 0;
+  font-size: 15px;
+}
+
+header .weatherIcon {
+  width: 120px;
+  height: 120px;
+  margin-right: 1vw;
+  color: #001D7C;
+}
