--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -1,8 +1,7 @@
 .searchBar {
     display: flex;
     align-items: center;
-    justify-content: center;
-    max-width: 30%;
+    width: 30%;
     flex-direction: column;
 }
 
@@ -15,8 +14,8 @@
 }
 
 .searchText .searchIcon {
-    width: 3vw;
-    height: 3vw;
+    width: 30px;
+    height: 30px;
 }
 
 .searchBar input {
@@ -59,4 +58,12 @@
 .dataResult .dataItem:hover {
     color: white;
      background-color: #001D7C;
+}
+
+/* Responsive Styles */
+
+@media only screen and (max-width: 600px) {
+    .searchBar {
+        max-width: 100%;
+    }
 }
