--- a/src/components/UpcomingForecasts.css
+++ b/src/components/UpcomingForecasts.css
@@ -1,3 +1,40 @@
-h1, h2, h3, p, .windIcon {
+.upcomingForecasts {
     color: #001D7C;
+    max-width: 15%;
+    max-height: 80vh;
+    border: 3px solid #001D7C;
+    border-radius: 10px;
+}
+
+.title {
+    display: flex;
+    align-items: center;
+}
+.dailyWeatherData {
+    max-height: 85%;
+    overflow: hidden;
+    overflow-y: scroll;
+}
+
+.dailyWeatherData::-webkit-scrollbar {
+    display: none;
+}
+
+.tempBox {
+    background-color: white;
+    margin: 10px;
+    border-radius: 10px;
+}
+
+h1 {
+    margin: 5px;
+}
+
+h2, h3 {
+    padding: 5px;
+}
+
+.weatherIcon {
+    width: 70px;
+    height: 70px;
 }
