--- a/src/components/Map.css
+++ b/src/components/Map.css
@@ -24,3 +24,9 @@
     justify-content: center;
     align-items: center;
 }
+
+@media only screen and (max-width: 600px) {
+    .leaflet-map {
+        width: 90vw;
+    }
+}
