--- a/src/components/Favorites.css
+++ b/src/components/Favorites.css
@@ -3,21 +3,23 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 3px solid #001D7C;
-    margin: 0 20px;
-    border-radius: 10px;
+    margin: 0;
     max-height: 80vh;
-    max-width: 15%;
+    max-width: 30%;
 }
 
 .favorites h1 {
     margin: 0 10px;
 }
 
-main {
+.favorites main {
     overflow-y: scroll; 
     display: flex;
     flex-direction: column;
+    border: 3px solid #001D7C;
+    border-radius: 10px;
+    align-items: center;
+    width: 20vw;
 }
 
 main::-webkit-scrollbar {
@@ -26,12 +28,13 @@ main::-webkit-scrollbar {
 
 .favoriteLocationItem {
     display: flex;
-    width: 12vw;
+    width: 85%;
     height: 70px;
     background-color: white;
     padding: 10px;
     margin: 10px;
     justify-content: space-between;
+    align-items: center;
     border-radius: 10px;
 }
 
@@ -46,11 +49,20 @@ main::-webkit-scrollbar {
 }
 
 .favoriteLocationItem .mainText h2  {
-    font-size: 1.3vw;
+    font-size: 18px;
     padding: 0;
 }
 
 .favoriteLocationItem > h2 {
     align-self:center ;
     font-size: 30px;
+}
+
+@media only screen and (max-width: 600px) {
+    .favorites main {
+        width: 90vw;
+    }
+    .favoriteLocationItem {
+        width: 90%;
+    }
 }
