--- a/src/components/Favorites.css
+++ b/src/components/Favorites.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     margin: 0;
-    max-height: 60vh;
+    max-height: 475px;
     max-width: 15%;
 }
 
@@ -62,11 +62,14 @@ main::-webkit-scrollbar {
     margin-bottom: 0;
 }
 
+@media only screen and (max-width: 1100px) {
+    .favorites main {
+        width: 70vw;
+    }
+}
+
 @media only screen and (max-width: 600px) {
     .favorites main {
         width: 90vw;
-    }
-    .favoriteLocationItem {
-        width: 90%;
     }
 }
