--- a/src/components/MainData.css
+++ b/src/components/MainData.css
@@ -25,6 +25,12 @@
     border-radius: 10px;
 }
 
+@media only screen and (max-width: 1100px) {
+    .mainData {
+        width: 70%;
+    }
+}
+
 @media only screen and (max-width: 600px) {
     .mainData {
         width: 90%;
