--- a/src/components/Map.css
+++ b/src/components/Map.css
@@ -1,20 +1,18 @@
 .map {
     display: flex;
     flex-direction: column;
-    height: 50vh;
 }
 
 .leaflet-map {
     border: 3px solid #001D7C;
     width: 30vw;
-    max-height: 50vh;
     border-radius: 10px;
     padding: 10px;
 }
 
 .leaflet-container {
     width: 100%;
-    height: 50vh;
+    height: 400px;
     border-radius: 10px;
 }
 
@@ -22,6 +20,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+@media only screen and (max-width: 1100px) {
+    .leaflet-map {
+        width: 70vw;
+    }
 }
 
 @media only screen and (max-width: 600px) {
