--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -26,7 +26,9 @@
     border: 3px solid #001D7C;
     border-radius: 5px;
     color: #001D7C;
-    font-family: 'Gilroy', 'Poppins';
+    font-family: 'Gilroy', 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
 }
 
 /* Search Bar Data Styles */
