--- a/src/components/UpcomingForecasts.css
+++ b/src/components/UpcomingForecasts.css
@@ -1,6 +1,6 @@
 .upcomingForecasts {
     width: 15%;
-    max-height: 63vh;
+    max-height: 495px;
 }
 
 .title {
@@ -38,13 +38,19 @@ h2, h3 {
     height: 70px;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1100px) {
     .upcomingForecasts {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;        
     }
+    main {
+        width: 70vw;
+    }
+}
+
+@media only screen and (max-width: 600px) {
     main {
         width: 90vw;
     }
