--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ header {
   color: #001D7C;
 }
 
-.clock {
+.clockTimer {
   position: absolute;
   top: 60px;
   right: 20px;
@@ -89,7 +89,7 @@ button:hover {
     top: 10px;
     right: 10px
   }
-  .clock {
+  .clockTimer {
     font-size: 3.5vw;
     top: 6.5vw;
     right: 10px;
@@ -120,7 +120,7 @@ button:hover {
     top: 10px;
     right: 10px
   }
-  .clock {
+  .clockTimer {
     font-size: 3.5vw;
     top: 40px;
     right: 10px;
